[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates
domain = { path = "../domain" }
configuration = { path = "../configuration" }

# RustyCog command framework
rustycog-command = { path = "../../rustycog/rustycog-command" }
# todo: not sure it  should be here, kinda break hexagonal architecture
rustycog-events = { path = "../../rustycog/rustycog-events" } 

# Utility
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
url = "2.5"
rand = "0.8.5"

# Cryptography
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Error handling
thiserror = "1.0.64"
anyhow = "1.0.82"

# Logging
tracing = "0.1.40"

# Async
async-trait = "0.1.77"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "time"] }
fastrand = "2.0"

# Compile-time plugin system
inventory = "0.3"

[dev-dependencies]
# Testing libraries for comprehensive unit testing
mockall = "0.13.0"
rstest = "0.23.0"
tokio-test = "0.4.4"
claims = "0.7.1"
serde_json = "1.0.140"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "test-util"] }
async-trait = "0.1.77" 