[package]
name = "iam-application"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal crates
iam-domain = { path = "../domain" }
iam-configuration = { path = "../configuration" }

# RustyCog command framework
rustycog-command = { path = "../../rustycog/rustycog-command" }
# todo: not sure it  should be here, kinda break hexagonal architecture
rustycog-events = { path = "../../rustycog/rustycog-events" } 

# Utility
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
rand = { workspace = true }

# Cryptography
hmac = "0.12"
sha2 = "0.10"
base64 = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["time"] }
fastrand = "2.0"

# Compile-time plugin system
inventory = "0.3"

[dev-dependencies]
# Testing libraries for comprehensive unit testing
mockall = { workspace = true }
rstest = { workspace = true }
tokio-test = { workspace = true }
claims = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
async-trait = { workspace = true } 