[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Events abstraction
rustycog-events = { path = "../../rustycog/rustycog-events" }
rustycog-core = { path = "../../rustycog/rustycog-core" }

# Utility
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }

# Error handling
thiserror = "1.0.56"

# Logging
tracing = "0.1"

# Async
async-trait = "0.1.77"

[dev-dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "test-util"] }
# Testing libraries for comprehensive unit testing
mockall = "0.13.0"
rstest = "0.23.0"
tokio-test = "0.4.4"
claims = "0.7.1" 