[package]
name = "iam-domain"
version.workspace = true
edition.workspace = true

[dependencies]
# Events abstraction
rustycog-events = { path = "../../rustycog/rustycog-events" }
rustycog-core = { path = "../../rustycog/rustycog-core" }
rustycog-config = { path = "../../rustycog/rustycog-config" }
iam-events = { path = "../../iam-events" }

# Utility
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
urlencoding = "2.1"

# Cryptography
sha2 = "0.10"
rand = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Async
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
# Testing libraries for comprehensive unit testing
mockall = { workspace = true }
rstest = { workspace = true }
tokio-test = { workspace = true }
claims = { workspace = true } 