[package]
name = "iam-migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "iammigration"
path = "src/lib.rs"

[[bin]]
name = "iammigration"
path = "src/main.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
rustycog-outbox = { path = "../../rustycog/rustycog-outbox" }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
