[package]
name = "iam-setup"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal workspace crates
iam-domain = { path = "../domain" }
iam-application = { path = "../application" }
iam-infra = { path = "../infra" }
iam-http_server = { path = "../http" }
iam-configuration = { path = "../configuration" }
rustycog-http = { path = "../../rustycog/rustycog-http" }
rustycog-events = { path = "../../rustycog/rustycog-events" }
rustycog-outbox = { path = "../../rustycog/rustycog-outbox" }
rustycog-permission = { path = "../../rustycog/rustycog-permission" }

# External dependencies
anyhow = "1.0.82"
axum = { workspace = true }
chrono = "0.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] } 

# Cryptographic dependencies for secret derivation
sha2 = "0.10"
base64 = "0.22" 